# steam_mcp

./: .env.example  .gitignore  ALIYUN_DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  SERVICE_INFO.md  USER_GUIDE.md  agent_main.py  aliyun_start.sh  bootstrap  build.sh  config.json  icon-prompt.txt  mcp_config_example.json  mcp_server.py  mcp_server_starlette.py  pyproject.toml  railway.toml  recommendations.json  render.yaml  requirements.txt  run.sh  s.yaml  start.py  test_mcp_client.py  test_new_tools.py  test_startup.py
src/: config_loader.py  llm_util.py  logger.py  recommendation_agent.py  requirement_analyzer.py  steam_crawler.py
